--- a/www/index.html
+++ b/www/index.html
@@ -193,7 +193,7 @@
 
     // ButtonCがクリックされた時の処理
     function btnCClick(e){
-        alarm();
+        //alarm();
         active = false; 
         period = 60* parseInt( $("#minute").val() ) +parseInt( $("#second").val() ); 
         $("#time").html("経過時間： 0");
@@ -208,6 +208,11 @@
                 rest = period - etime;
                 $("#time").html("経過時間： " + etime); 
                 $("#remain").html("残り時間： " + rest); analog(rest); 
+        }
+
+        if(rest<=0){
+            active = false;
+            alarm();
         }
     } 
 
