--- a/www/index.html
+++ b/www/index.html
@@ -233,9 +233,9 @@
 
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
-    <button id="btnA">スタート/リセット</button>  
-    <button id="btnB">ストップ</button>  
-    <button id="btnC">セット</button>  
+    <button id="btnA">Start</button>  
+    <button id="btnB">btnB</button>  
+    <button id="btnC">btnC</button>  
     <input type="number" id="minute" value=3 >
     <input type="number" id="second" value=0 >
 
